--- a/MonthlyIB/front/components/layoutComponents/AppLayout.module.css
+++ b/MonthlyIB/front/components/layoutComponents/AppLayout.module.css
@@ -7,9 +7,11 @@ header .header_wrap {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 110rem;
+  max-width: 110rem;
+  width: 100%;
   height: 100%;
   margin: 0 auto;
+  padding: 0 2rem;
   z-index: 1;
   position: relative;
 }
